--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,17 +31,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_app_name" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_weather_hours"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_search" />
-
     <Button
         android:id="@+id/btn_search"
         android:layout_width="0dp"
@@ -58,10 +47,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/rv_weather_hours"
         app:layout_constraintEnd_toEndOf="@+id/et_city_name"
         app:layout_constraintStart_toStartOf="@+id/et_city_name"
         app:layout_constraintTop_toBottomOf="@+id/et_city_name" />
+
+    <TextView
+        android:id="@+id/tv_current_weather"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_search" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
