--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,27 +51,37 @@
         app:layout_constraintStart_toStartOf="@+id/et_city_name"
         app:layout_constraintTop_toBottomOf="@+id/et_city_name" />
 
-    <ScrollView
+
+    <TextView
+        android:id="@+id/tv_current_location"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/btn_search"
+        app:layout_constraintTop_toBottomOf="@+id/btn_search"
+        />
+
+    <TextView
+        android:id="@+id/tv_current_weather"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/btn_search"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_search">
+        app:layout_constraintTop_toBottomOf="@+id/tv_current_location" />
 
-        <TextView
-            android:id="@+id/tv_current_weather"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_search" />
-    </ScrollView>
+    <ImageView
+        android:id="@+id/iv_weather_icon"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:contentDescription="@string/weather_icon"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/tv_current_weather"
+        app:layout_constraintTop_toTopOf="@+id/tv_current_weather" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
