--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/tv_app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="150dp"
         android:text="@string/everyweather"
         android:textSize="32sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,32 +56,56 @@
         android:id="@+id/tv_current_location"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="32dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/btn_search"
-        app:layout_constraintTop_toBottomOf="@+id/btn_search"
-        />
+        app:layout_constraintBottom_toTopOf="@+id/tv_current_weather"
+        app:layout_constraintEnd_toStartOf="@+id/guideline"
+        app:layout_constraintStart_toStartOf="@+id/tv_current_weather"
+        app:layout_constraintTop_toTopOf="@+id/guidelineH" />
 
     <TextView
         android:id="@+id/tv_current_weather"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="16dp"
+        android:layout_marginHorizontal="42dp"
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/btn_search"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_current_location" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_weather_icon" />
 
     <ImageView
         android:id="@+id/iv_weather_icon"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:contentDescription="@string/weather_icon"
+        android:scaleType="fitCenter"
+        app:layout_constraintEnd_toEndOf="@+id/tv_current_weather"
+        app:layout_constraintStart_toEndOf="@+id/tv_current_location"
+        app:layout_constraintTop_toTopOf="@+id/guidelineH" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tv_current_weather"
-        app:layout_constraintTop_toTopOf="@+id/tv_current_weather" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_search" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineH"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.5" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
