style(activity_main): change some styles
- Change bg-color and button color
- Add new font for app-name

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    android:background="#ff9f11"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".presentation.ui.main.MainActivity">
@@ -12,8 +13,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
+        android:fontFamily="casual"
         android:text="@string/everyweather"
-        android:textSize="32sp"
+        android:textSize="42sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -36,6 +38,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:backgroundTint="#1171ff"
         android:text="@string/search"
         app:layout_constraintEnd_toEndOf="@+id/et_city_name"
         app:layout_constraintStart_toStartOf="@+id/et_city_name"
