feat(MainActivity): add animations
- Add animations on main activity
- Add new font
- Some design changes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,22 +3,38 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:background="#ff9f11"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#f3e376"
     tools:context=".presentation.ui.main.MainActivity">
 
-    <TextView
-        android:id="@+id/tv_app_name"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/upper_slider"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="150dp"
-        android:fontFamily="casual"
-        android:text="@string/everyweather"
-        android:textSize="42sp"
+        android:background="@drawable/upper_slide"
+        android:layout_marginHorizontal="16dp"
+        android:paddingTop="160dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/et_city_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/tv_app_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/mainfont"
+            android:text="@string/everyweather"
+            android:textColor="@color/black"
+            android:textSize="52sp"
+            android:layout_gravity="center_horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </LinearLayout>
 
     <EditText
         android:id="@+id/et_city_name"
@@ -27,19 +43,24 @@
         android:layout_marginTop="64dp"
         android:autofillHints=""
         android:ems="10"
+        android:fontFamily="@font/mainfont"
         android:hint="@string/search_placeholder"
         android:inputType="text"
+        android:textColor="@color/black"
+        android:textColorHint="#6A6464"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_app_name" />
+        app:layout_constraintTop_toBottomOf="@+id/upper_slider" />
 
     <Button
         android:id="@+id/btn_search"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#1171ff"
+        android:backgroundTint="#63e4c3"
+        android:fontFamily="@font/mainfont"
         android:text="@string/search"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/et_city_name"
         app:layout_constraintStart_toStartOf="@+id/et_city_name"
         app:layout_constraintTop_toBottomOf="@+id/et_city_name" />
@@ -49,66 +70,67 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@+id/et_city_name"
         app:layout_constraintStart_toStartOf="@+id/et_city_name"
         app:layout_constraintTop_toBottomOf="@+id/et_city_name" />
 
-
-    <TextView
-        android:id="@+id/tv_current_location"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/tv_current_weather"
-        app:layout_constraintEnd_toStartOf="@+id/guideline"
-        app:layout_constraintStart_toStartOf="@+id/tv_current_weather"
-        app:layout_constraintTop_toTopOf="@+id/guidelineH" />
-
-    <TextView
-        android:id="@+id/tv_current_weather"
+    <LinearLayout
+        android:id="@+id/lower_slider"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="42dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_weather_icon" />
-
-    <ImageView
-        android:id="@+id/iv_weather_icon"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:contentDescription="@string/weather_icon"
-        android:scaleType="fitCenter"
-        app:layout_constraintEnd_toEndOf="@+id/tv_current_weather"
-        app:layout_constraintStart_toEndOf="@+id/tv_current_location"
-        app:layout_constraintTop_toTopOf="@+id/guidelineH" />
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_search" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_marginHorizontal="16dp"
+        android:paddingHorizontal="16dp"
+        android:paddingTop="16dp"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.5" />
+        android:background="@drawable/lower_slide"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_search" >
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineH"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.5" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_current_location"
+                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/mainfont"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:ellipsize="end"
+                tools:text="wcjjkwchwcgwkjh"/>
+
+            <ImageView
+                android:id="@+id/iv_weather_icon"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:layout_marginEnd="32dp"
+                android:contentDescription="@string/weather_icon"
+                android:scaleType="fitCenter"
+                android:layout_gravity="center_vertical"
+                app:layout_constraintEnd_toEndOf="@+id/tv_current_weather"
+                app:layout_constraintTop_toBottomOf="@+id/btn_search" />
+
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tv_current_weather"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/mainfont"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            tools:text="cibcilhqcbiqcqc" />
+
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
