--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -110,15 +110,23 @@
             android:textSize="32sp"
             tools:text="London, United Kingdom" />
 
-        <TextView
-            android:id="@+id/tvCurrentWind"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:fontFamily="@font/montserrat_light"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            tools:text="Ветер 3 м/с" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvCurrentWind"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:fontFamily="@font/montserrat_light"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                tools:text="Ветер 3 м/с" />
+
+        </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
