--- a/app/src/main/res/layout/forecast_back.xml
+++ b/app/src/main/res/layout/forecast_back.xml
@@ -11,16 +11,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#f3f4f6"
+        android:background="#dee1e6"
         android:orientation="horizontal"
-        android:padding="15dp">
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="22dp">
 
         <TextView
             android:id="@+id/tvTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="32dp"
             android:fontFamily="@font/montserrat_bold"
+            android:textColor="@color/black"
             android:textSize="16sp"
             tools:text="00:00:" />
 
@@ -33,10 +35,35 @@
             android:fontFamily="@font/montserrat_bold"
             android:textColor="@color/black"
             android:textSize="32sp"
-            android:textStyle="bold"
             tools:text="29.2 °C" />
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tvWind"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat_light"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                tools:text="Ветер: 3 м/с" />
+
+            <TextView
+                android:id="@+id/tvRain"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat_light"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                tools:text="Дождь: 55%" />
+
+        </LinearLayout>
+
         <ImageView
+            android:layout_marginStart="16dp"
             android:id="@+id/ivWeatherIcon"
             android:layout_width="52dp"
             android:layout_height="52dp"
@@ -45,5 +72,25 @@
 
 
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/tvInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginStart="16dp"
+            android:layout_marginBottom="3dp"
+            android:fontFamily="@font/montserrat_bold"
+            android:gravity="clip_horizontal"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            tools:text="Облачно с прояснениями" />
+
+    </LinearLayout>
+
 
 </androidx.cardview.widget.CardView>
