--- a/app/src/main/res/layout/activity_forecast.xml
+++ b/app/src/main/res/layout/activity_forecast.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
+    android:backgroundTint="@android:color/white"
     tools:context=".presentation.ui.main.MainActivity">
 
     <TextView
@@ -15,33 +16,44 @@
         android:layout_marginHorizontal="16dp"
         android:background="@drawable/upper_slide"
         android:fontFamily="@font/montserrat_bold"
+        android:foreground="@null"
         android:gravity="center_horizontal"
-        android:paddingTop="32dp"
+        android:paddingTop="42dp"
         android:paddingBottom="16dp"
         android:textColor="@color/black"
         android:textSize="32sp"
+        android:translationZ="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="26 сентября 2025" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvForecast"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="96dp"
+        android:layout_height="match_parent"
+        android:paddingTop="106dp"
         android:layout_marginBottom="64dp"
+        android:overScrollMode="always"
+        android:clipToPadding="false"
         android:orientation="vertical"
         tools:listitem="@layout/forecast_back" />
+
 
     <Button
         android:id="@+id/btnBack"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center_horizontal"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginBottom="8dp"
         android:backgroundTint="#dee1e6"
         android:fontFamily="@font/montserrat_bold"
         android:text="@string/back"
         android:textColor="@color/black"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-</androidx.cardview.widget.CardView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
