--- a/app/src/main/res/layout/forecast_back.xml
+++ b/app/src/main/res/layout/forecast_back.xml
@@ -20,7 +20,7 @@
             android:id="@+id/tvTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="32dp"
+            android:layout_marginEnd="16dp"
             android:fontFamily="@font/montserrat_bold"
             android:textColor="@color/black"
             android:textSize="16sp"
@@ -28,10 +28,10 @@
 
         <TextView
             android:id="@+id/tvCurrentTemp"
-            android:layout_width="0dp"
+            android:layout_marginEnd="32dp"
+            android:layout_width="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:fontFamily="@font/montserrat_bold"
             android:textColor="@color/black"
             android:textSize="32sp"
